# pypowerline

./: LICENSE  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py  version.py
doc/: DONE.txt  LINKS.txt  TODO.txt  design.txt
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pypowerline.html  search.html  searchindex.js
docs/.doctrees/: index.doctree  modules.doctree  pypowerline.doctree
docs/_modules/: index.html
docs/_modules/pypowerline/: colors.html  configs.html  main.html  segments.html  symbols.html  utils.html
docs/_sources/: pypowerline.rst.txt
pypowerline/: colors.py  configs.py  create_color.py  main.py  segments.py  static.py  symbols.py  utils.py
sphinx/: modules.rst
src/pypowerline/: main.py  segments.py  static.py  symbols.py  utils.py
