[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypowerline"
version = "0.0.32"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "sane powerline"
readme = "README.md"
license = "MIT"
keywords=[
    "powerline",
    "powerline-shell",
    "shell",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pypowerline"
"Bug Tracker" = "https://github.com/veltzer/pypowerline/issues"
"Documentation" = "https://veltzer.github.io/pypowerline"
"Download" = "https://pypi.org/project/pypowerline/"
"Repository" = "https://github.com/veltzer/pypowerline"

[project.scripts]
pypowerline = "pypowerline.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pypowerline"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pypowerline/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
